--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -99,11 +99,11 @@
     </array>
     <array name="cpu.clusters.cores">
         <value>4</value> <!-- Cluster 0 has 4 cores (cpu0, cpu1, cpu2, cpu3) -->
-        <value>2</value> <!-- Cluster 0 has 2 cores (cpu4, cpu5) -->
+        <value>4</value> <!-- Cluster 1 has 4 cores (cpu4, cpu5, cpu6, cpu7) -->
     </array>
 
     <!-- This is the battery capacity in mAh -->
-    <item name="battery.capacity">4000</item>
+    <item name="battery.capacity">3200</item>
 
     <array name="wifi.batchedscan"> <!-- mA.  Current figures based on .0801 s/c and 75.48mA while scanning -->
         <value>.0002</value> <!-- 1-8/hr -->
