gohan: Show must go on
* Use CAF's LA.BR.1.3.4-09010-8976.0 PowerHAL instead of CM's MSM8952
* Adress some denials
* Add some missing audio configs and update some
* Go using CM's WCNSS
* Disable GPS combo provider
* Build missing libcryptfs_hw

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -345,6 +345,8 @@
         <item>ehrpd:4094,87380,1048576,4096,16384,262144</item>
     </string-array>
 
+    <!--  Define Google play service package for FRP-->
+    <string name="config_persistentDataPackageName" translatable="false">com.google.android.gms</string>
 
     <!-- Package name providing network location support. Used only when
          config_enableNetworkLocationOverlay is false. -->
